--- a/FXExperienceControls/src/main/resources/styles/PopupEditor.css
+++ b/FXExperienceControls/src/main/resources/styles/PopupEditor.css
@@ -32,6 +32,7 @@
 
 /* Need to remove the blue color when hovering the menu item */
 .root {
+    -fx-base: #323232;
     -fx-color: #111;
     -fx-focus-color: #111;
     -fx-background: #111;
@@ -41,7 +42,7 @@
     -fx-box-border: #222;
 }
 .editor-host {
-    -fx-background-color: #222;
+    -fx-background-color: #1C1C1C;
 }
 
 /*******************************************************************************
@@ -49,8 +50,6 @@
  * PopupMenu                                                                   *
  *                                                                             *
  ******************************************************************************/
-
-
 .context-menu {
     -fx-background-color:
             linear-gradient(to bottom,
