--- a/FXExperienceTools/src/main/resources/styles/derivation.css
+++ b/FXExperienceTools/src/main/resources/styles/derivation.css
@@ -11,73 +11,57 @@ different terms and without source code for the larger work.
     Author     : andje22
 */
 .root {
-    -fx-base: #31363B;
     -fe-body-background: #31363B;
     -fe-inner-background: #2E3134;
     -fe-border: #616569;
     -fe-body-text: #DCDCDC;
     -fe-inner-text: #C2C2C3;
-    -fx-font-family: "Helvetica Neue", "Lucida Grande", "sans-serif";
 
-
-    -fx-background: #2E3134;
-
-    -fx-background-color: #84b6eb;
+    -fx-background-color: #2E3134;
     -fx-focus-color: #339797;
 }
-.gradient-text-area .content {
-    -fx-background-color: #2E3134;
-}
-
-.gradient-text-area {
-    -fx-text-fill: #C2C2C3;
-}
-.paint-picker-container {
-    -fx-background-color: #2E3134;
-    -fx-padding: 0;
-}
-.color-picker-popover {
-    -fx-font-size: 10px;
-
-    -fx-background: derive(-fx-base, -60%);
-    -fx-focus-color: rgb(105, 255, 205);
-}
-
-.label {
-    -fx-text-fill: white;
-}
-
-.integer-field {
-    -fx-alignment: BASELINE_LEFT;
-    -fx-text-fill: white;
-}
-.webcolor-field {
-    -fx-alignment: BASELINE_LEFT;
-    -fx-text-fill: white;
-}
-
 .derivation-root {
     -fx-background-image: url("../images/dirtyshirt.png");
 }
 
-#gridPane {
-    -fx-background-color: radial-gradient(center 35% 40%, radius 70%, rgba(255,255,255,0.3), rgba(255,255,255,0.05)); 
+.prop-title {
+    -fx-padding: 0;
+    -fx-border-width: -1;
 }
-.conversion-label {
-    -fx-font-family: cursive;
-    -fx-font-size: 22px;
-    -fx-text-fill: #3AA6DF;
+
+
+.main-grid {
+    -fx-background-color: radial-gradient(center 35% 40%, radius 70%, rgba(255,255,255,0.3), rgba(255,255,255,0.05));
 }
-.label {
-    -fx-text-fill: white;
+.prop-grid {
+    -fx-background-color: #2E3134;
 }
-.color-picker .text {
+.split-pane-main {
+    -fx-background-color: transparent;
+}
+.split-pane-divider {
+    -fx-background-color: transparent;
+    -fx-padding: 0;
+}
+.tab {
+    -fx-background-color: #131313;
+}
+.tab-pane:right .tab-header-area .tab-header-background {
+    -fx-background-color: #1C1C1C;
+}
+.tab:selected:right {
+    -fx-background-color: #2E3134;
+}
+.tab-pane:right .tab-header-area .headers-region .tab:right .tab-container .tab-label .text {
     -fx-fill: #C2C2C3;
 }
-.color-picker {
-    -fx-color: #282828;
-    -fx-shadow-highlight-color: #323232;
+.tab:selected:left {
+    -fx-background-color: #2A5058;
 }
+.tab-pane:left .tab-header-area .headers-region .tab:left .tab-container .tab-label .text {
+    -fx-fill: #C2C2C3;
+}
+
 
 .derivation-slider .track{
     -fx-background-color:  #2E3134;
@@ -85,6 +69,15 @@ different terms and without source code for the larger work.
     -fx-background-insets: -0.2, 1, 2;
     -fx-background-radius: 3.2, 2, 2;
     -fx-border-radius: 2.2, 2, 2;
+}
+
+.conversion-label {
+    -fx-font-family: cursive;
+    -fx-font-size: 22px;
+    -fx-text-fill: #3AA6DF;
+}
+.label {
+    -fx-text-fill: white;
 }
 
 .derivation-slider .thumb {
@@ -103,20 +96,30 @@ different terms and without source code for the larger work.
     -fx-font-size: .63333em;
 }
 
-/*.derivation-slider .track {*/
-    /*-fx-background-color:*/
-        /*transparent,*/
-        /*derive(-fx-color,-90%),*/
-        /*linear-gradient(to bottom, derive(-fx-color,-15.5%), derive(-fx-color,34%) 30%, derive(-fx-color,68%));*/
-/*}*/
+.color-picker .text {
+    -fx-fill: #C2C2C3;
+}
+.color-picker {
+    -fx-color: #282828;
+    -fx-shadow-highlight-color: #323232;
+}
 
-/*.derivation-slider .thumb {*/
-    /*-fx-background-color:*/
-        /*derive(-fx-color,-90%),*/
-        /*derive(-fx-color,73%),*/
-        /*linear-gradient(to bottom, derive(-fx-color,-19%),derive(-fx-color,61%));*/
-/*}*/
 .color-picker {
     -fx-text-fill: #333333;
     -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
+}
+.gradient-text-area .content {
+    -fx-background-color: #2E3134;
+}
+
+.gradient-text-area .scroll-pane:fitToWidth:fitToHeight .viewport .content {
+    -fx-border-color: transparent;
+}
+.gradient-text-area {
+    -fx-text-fill: #C2C2C3;
+
+}
+.paint-picker-container {
+    -fx-background-color: #2E3134;
+    -fx-padding: 0;
 }
