--- a/FXExperienceControls/src/main/resources/styles/ColorPicker.css
+++ b/FXExperienceControls/src/main/resources/styles/ColorPicker.css
@@ -29,24 +29,27 @@
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
+#CONTENT {
+    -fx-background-color: #31363B;
+}
 
 #StackPane {
     -fx-background-color: white;
 }
 .small-label {
+    -fx-text-fill: #C2C2C3;
     -fx-font-size: 0.750em;
     -fx-padding: 0;
 }
 .chip-background {
-    -fx-border-color: -fx-box-border, white;
-    -fx-border-insets: 0, 1;
+    -fx-border-color: #606060;
+    -fx-border-insets: 0;
     -fx-background-color: white;
     -fx-background-image: url("../images/chequers.png");
     -fx-background-position: center;
 }
 
 .hue-slider .thumb {
-
     -fx-background-radius: .2em; /* makes sure this remains circular */
     -fx-border-radius: .2em;
     -fx-border-width: 2;
@@ -54,6 +57,7 @@
     -fx-border-color: #606060;
     -fx-background-color: transparent;
 }
+
 .hue-slider:focused .thumb {
     -fx-background-radius: .2em; /* makes sure this remains circular */
     -fx-border-radius: .2em;
@@ -70,19 +74,13 @@
     -fx-border-color: #878787;
     -fx-background-color: transparent;
 }
+
 .opacity-slider:focused .thumb {
     -fx-border-width: 2;
     -fx-border-color: #878787;
     -fx-background-color: transparent;
-
 }
 
-.hue-slider .track {
-    -fx-background-color: transparent;
-}
-.opacity-slider .track {
-    -fx-background-color: transparent;
-}
 .alpha-background{
     -fx-background-insets: -0.4, 1, 2;
     -fx-background-radius: 3.4, 2, 2;
@@ -94,13 +92,12 @@
     -fx-background-radius: 3.4, 2, 2;
     -fx-background-image: url("../images/chequers.png");
     -fx-background-position: center;
-
-
-
 }
+
 .brightnessRect {
     -fx-background-color: linear-gradient(to bottom, transparent, black);
 }
+
 .saturationRect {
     -fx-background-color: linear-gradient(to bottom right, white, transparent);
 }
@@ -108,18 +105,19 @@
 #input-text-field {
     -fx-skin: "com.sun.javafx.scene.control.skin.TextFieldSkin";
 }
-
 .color-field {
-    -fx-background-color: -fx-shadow-highlight-color, -fx-text-box-border, -fx-control-inner-background;
+    -fx-background-color: #31363B;
     -fx-background-insets: 0, 1, 2;
     -fx-background-radius: 3, 2, 2;
+    -fx-border-color: #717171;
     -fx-padding: 3 5 3 5;
-    -fx-prompt-text-fill: derive(-fx-control-inner-background,-30%);
+    -fx-text-fill: #C2C2C3;
+    -fx-prompt-text-fill: #606060;
     -fx-cursor: text;
 }
 
 .color-field:focused {
-    -fx-background-color: -fx-focus-color, -fx-text-box-border, -fx-control-inner-background;
+    -fx-background-color: #31363B;
     -fx-background-insets: -0.4, 1, 2;
     -fx-background-radius: 3.4, 2, 2;
 }
