--- a/FXExperienceControls/src/main/resources/fxml/FXMLColorPicker.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLColorPicker.fxml
@@ -50,7 +50,7 @@
 
 <fx:root id="CONTENT" maxHeight="-1.0" maxWidth="-Infinity" prefHeight="-1.0" prefWidth="304.0" style="" stylesheets="@../styles/ColorPicker.css" type="javafx.scene.layout.VBox" visible="true" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <GridPane gridLinesVisible="false" vgap="1.0" VBox.vgrow="NEVER">
+    <GridPane gridLinesVisible="false" hgap="1.0" vgap="2.0" VBox.vgrow="NEVER">
       <children>
         <DoubleTextField fx:id="alpha_textfield" onAction="#onActionAlpha" prefColumnCount="3" prefWidth="-1.0" styleClass="color-field" GridPane.columnIndex="6" GridPane.hgrow="NEVER" GridPane.rowIndex="2">
                <GridPane.margin>
@@ -92,13 +92,13 @@
                 <children>
                   <StackPane VBox.vgrow="ALWAYS">
                     <children>
-                      <Region style="" styleClass="chip-background" />
-                      <Region fx:id="chip_region" style="">
+                      <Region maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="57.0" prefWidth="102.0" style="" styleClass="chip-background" />
+                      <Region fx:id="chip_region" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="57.0" prefWidth="102.0" style="">
                         <padding>
                           <Insets fx:id="x6" />
                         </padding>
                         <StackPane.margin>
-                          <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                          <Insets />
                         </StackPane.margin>
                       </Region>
                     </children>
@@ -108,12 +108,12 @@
               </VBox>
             </children>
           </HBox>
-            <HBox maxWidth="-Infinity" prefWidth="250.0" GridPane.columnSpan="6" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+            <HBox maxWidth="-Infinity" prefWidth="258.0" GridPane.columnSpan="6" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                <children>
-                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="250.0" style="-fx-background-color: white;" HBox.hgrow="NEVER">
+                  <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="258.0" style="-fx-background-color: white;" HBox.hgrow="NEVER">
                      <children>
-                  <Region fx:id="alpha_region" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="250.0" style="" styleClass="alpha-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Region fx:id="alpha_bar" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#onAlphaPickerDragged" onMouseReleased="#onAlphaPickerClicked" prefHeight="20.0" prefWidth="250.0" style="-fx-border-color: #606060;;" styleClass="opacity-slider-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Region fx:id="alpha_region" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="254.0" style="" styleClass="alpha-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Region fx:id="alpha_bar" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#onAlphaPickerDragged" onMouseReleased="#onAlphaPickerClicked" prefHeight="20.0" prefWidth="258.0" style="-fx-border-color: #606060;;" styleClass="opacity-slider-background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                         <StackPane fx:id="alpha_handle_stackpane" layoutX="232.0" prefHeight="20.0">
                            <children>
                               <Circle fill="TRANSPARENT" radius="8.0" stroke="BLACK" strokeType="INSIDE" />
