--- a/FXExperienceControls/src/main/resources/styles/PopupEditor.css
+++ b/FXExperienceControls/src/main/resources/styles/PopupEditor.css
@@ -32,37 +32,77 @@
 
 /* Need to remove the blue color when hovering the menu item */
 .root {
-    -fx-base: #323232;
+    -fx-base: #31363B;
     -fx-color: #111;
-    -fx-focus-color: #111;
-    -fx-background: #111;
-    -fx-selection-bar: #222;
+    -fx-focus-color: #31363B;
+    -fx-background: #31363B;
+    -fx-selection-bar: #31363B;
     -fx-text-background-color: #C2C2C9;
     -fx-fill: #C2C2C9;
-    -fx-box-border: #222;
+    -fx-box-border: #606060;
 }
 .editor-host {
-    -fx-background-color: #1C1C1C;
+    -fx-background-color: #31363B;
+}
+/*******************************************************************************
+ * Menu Bar			                                                           *
+ ******************************************************************************/
+.menu {
+    -fx-background-color: transparent;
+    -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em;
 }
 
+.menu:hover,
+.menu-button .menu:hover {
+    -fx-text-fill: white;
+    -fx-background-color:  #31363B;
+
+}
+.main-menu {
+    /*    -fx-background-color:  derive(rgb(147, 147, 147), -60%);*/
+    -fx-background-color:#31363B, #31363B, #31363B, #31363B;
+    -fx-background-insets: 0 0 -1 0, 0, 1 0 0 0, 2 0 0 0;
+    -fx-padding: 0.385em 0.692em 0.231em 0.692em;
+    -fx-font-size: 0.875em;
+    -fx-alignment: center-left;
+    -fx-effect: dropshadow( two-pass-box, rgba(0, 0, 0, 0.2), 5, 0.0, 0, 1 );
+
+
+    /* Nothing more needed for Mac OS X than the following property!
+     * All other definitions kept from caspian, to ensure, that MenuBar
+     * is shown properly on non-mac systems.
+     */
+    -fx-use-system-menu-bar: true;
+}
+.menu-item,
+.menu-item:focused,
+.menu-item:hover{
+    -fx-background-color: #31363B;
+    /*       -fx-background-insets: 1, 1, 1;*/
+}
+.main-menu .container .menu:openvertically .label .text {
+    -fx-font-family: "Helvetica Neue", "Lucida Grande", "sans-serif";
+}
+.context-menu {
+    -fx-skin: "com.sun.javafx.scene.control.skin.ContextMenuSkin";
+    -fx-background-color: #31363B, #31363B,#31363B, #31363B;
+    /*    -fx-background-insets: 0, 1, 2;*/
+
+    /*    -fx-padding: 0.666667em 0.083333em 0.666667em 0.083333em;  8 1 8 1 */
+    /*-fx-padding: 0.333333em 0.083333em 0.666667em 0.083333em; /* 4 1 8 1 */
+}
 /*******************************************************************************
  *                                                                             *
  * PopupMenu                                                                   *
  *                                                                             *
  ******************************************************************************/
 .context-menu {
-    -fx-background-color:
-            linear-gradient(to bottom,
-            derive(-fx-color,-17%),
-            derive(-fx-color,-30%)
-            ),
-            -fx-control-inner-background;
+    -fx-background-color: #31363B, #31363B;
     -fx-background-insets: 0, 1;
     -fx-padding: 0.333333em 0.083333em 0.333333em 0.083333em; /* 4 1 8 1 */
-    -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.2) , 12, 0.0 , 0 , 8 );
 }
 .context-menu .separator:horizontal .line {
-    -fx-border-color: -fx-box-border transparent transparent transparent;
+    -fx-border-color: #31363B transparent transparent transparent;
     -fx-border-insets: 1 0 0 0;
 }
 .context-menu > .scroll-arrow {
@@ -70,11 +110,9 @@
     -fx-background-color: transparent;
 }
 .context-menu > .scroll-arrow:hover {
-    -fx-background: -fx-selection-bar;
-    -fx-background-color: -fx-background;
+    -fx-background: #31363B;
+    -fx-background-color: #31363B;
     -fx-text-fill: -fx-text-background-color;
 }
-.context-menu:show-mnemonics > .mnemonic-underline {
-    -fx-stroke: -fx-text-fill;
-}
+
 
