--- a/FXExperienceTools/src/main/resources/fxml/FXMLDerivationPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLDerivationPanel.fxml
@@ -67,7 +67,7 @@
                             </GridPane>
                            </children>
                         </AnchorPane>
-                      <AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="380.0" style="-fx-background-color: #111;">
+                      <AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="380.0" style="-fx-background-color: transparent;">
                            <children>
                               <GridPane layoutX="1.0" styleClass="prop-grid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columnConstraints>
@@ -77,7 +77,7 @@
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                 </columnConstraints>
                                 <rowConstraints>
-                                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
                                   <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
                                   <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
                                     <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
@@ -96,7 +96,7 @@
                                 <Label id="label4" text="Desired Color:" GridPane.columnSpan="2" GridPane.rowIndex="2" />
                                  </children>
                                  <padding>
-                                    <Insets left="10.0" />
+                                    <Insets left="10.0" top="20.0" />
                                  </padding>
                               </GridPane>
                            </children>
@@ -140,7 +140,7 @@
                                     <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="4">
                                        <children>
                                           <Rectangle fx:id="gradientSquare" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="120.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-                                          <Circle fx:id="gradientCircle" fill="DODGERBLUE" radius="80.0" stroke="BLACK" strokeType="INSIDE" />
+                                          <Circle fx:id="gradientCircle" fill="#6b7b8a" radius="80.0" stroke="#b95b5b" strokeType="INSIDE" />
                                        </children>
                                     </HBox>
                                     <TextArea fx:id="gradientCSSText" maxHeight="-Infinity" prefHeight="130.0" prefWidth="180.0" styleClass="gradient-text-area" wrapText="true" GridPane.columnSpan="5" GridPane.rowIndex="6" GridPane.rowSpan="3" />
@@ -163,7 +163,7 @@
                                     <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
                                  </rowConstraints>
                                  <padding>
-                                    <Insets left="10.0" />
+                                    <Insets left="10.0" top="20.0" />
                                  </padding>
                                  <children>
                                     <Label id="label7" text="Gradient:" />
