--- a/FXExperienceTools/src/main/resources/fxml/FXMLDerivationPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLDerivationPanel.fxml
@@ -2,12 +2,15 @@
 
 <?import com.fxexperience.javafx.scene.control.colorpicker.ColorPickerTool?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -111,7 +114,7 @@
                      <items>
                         <AnchorPane>
                            <children>
-                              <GridPane hgap="5.0" styleClass="main-grid" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <GridPane alignment="CENTER" styleClass="main-grid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <columnConstraints>
                                     <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="-Infinity" minWidth="10.0" prefWidth="110.0" />
                                     <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="-Infinity" minWidth="10.0" prefWidth="110.0" />
@@ -139,12 +142,27 @@
                                  <children>
                                     <HBox alignment="CENTER" spacing="20.0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="4">
                                        <children>
-                                          <Rectangle fx:id="gradientSquare" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="120.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-                                          <Circle fx:id="gradientCircle" fill="#6b7b8a" radius="80.0" stroke="#b95b5b" strokeType="INSIDE" />
+                                          <Rectangle fx:id="gradientSquare" arcHeight="20.0" arcWidth="20.0" fill="DODGERBLUE" height="80.0" stroke="BLACK" strokeType="INSIDE" styleClass="gradient-shape" width="100.0" />
+                                          <Button fx:id="fxButton" contentDisplay="BOTTOM" mnemonicParsing="false" prefHeight="200.0" prefWidth="160.0" styleClass="gradient-object" text="FXExperience">
+                                             <graphic>
+                                                <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../images/fxexperience-logo.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                          <Circle fx:id="gradientCircle" fill="#6b7b8a" radius="50.0" stroke="#b95b5b" strokeType="INSIDE" styleClass="gradient-shape" />
                                        </children>
                                     </HBox>
                                     <TextArea fx:id="gradientCSSText" maxHeight="-Infinity" prefHeight="130.0" prefWidth="180.0" styleClass="gradient-text-area" wrapText="true" GridPane.columnSpan="5" GridPane.rowIndex="6" GridPane.rowSpan="3" />
-                                    <Label id="label7" text="Gradient CSS:" GridPane.columnSpan="2" GridPane.rowIndex="5" />
+                                    <Label id="label7" text="Gradient CSS:" GridPane.columnSpan="2" GridPane.rowIndex="5">
+                                       <padding>
+                                          <Insets left="10.0" />
+                                       </padding>
+                                       <GridPane.margin>
+                                          <Insets top="15.0" />
+                                       </GridPane.margin></Label>
                                  </children>
                               </GridPane>
                            </children>
@@ -166,7 +184,10 @@
                                     <Insets left="10.0" top="20.0" />
                                  </padding>
                                  <children>
-                                    <Label id="label7" text="Gradient:" />
+                                    <Label id="label7" text="Gradient:">
+                                       <GridPane.margin>
+                                          <Insets />
+                                       </GridPane.margin></Label>
                                  </children>
                               </GridPane>
                            </children>
