--- a/FXExperienceTools/src/main/resources/fxml/FXMLDerivationPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLDerivationPanel.fxml
@@ -17,6 +17,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 
@@ -32,71 +33,92 @@
                            <children>
                             <GridPane hgap="5.0" styleClass="main-grid" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                               <children>
-                                <Label id="label3" text="Derived Result:" GridPane.rowIndex="2" />
-                                <Label id="label7" text="Result Color:" GridPane.rowIndex="4" />
-                                <Label fx:id="reverseResultLabel" prefHeight="21.0" prefWidth="250.0" text="#EEEEEE" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="4" />
-                                <Label fx:id="derivedResultLabel" prefWidth="250.0" text="Label" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" />
-                                    <Label styleClass="conversion-label" text="Forward Conversion" GridPane.columnSpan="3" GridPane.rowIndex="1" />
-                                    <Label styleClass="conversion-label" text="Reverse Conversion" GridPane.columnSpan="3" GridPane.rowIndex="3" />
-                                    <HBox alignment="CENTER_LEFT" spacing="5.0" GridPane.columnSpan="2" GridPane.rowIndex="5">
-                                       <children>
-                                      <Label id="label5" text="Derivation:" />
-                                      <Label fx:id="reverseDerivationLabel" text="30%" />
-                                       </children>
-                                    </HBox>
+                                <Label fx:id="derivedResultLabel" prefWidth="300.0" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                                <Label fx:id="reverseResultLabel" maxWidth="-Infinity" prefWidth="300.0" text="#EEEEEE" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                                    <Label styleClass="conversion-label" text="Forward Conversion" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1" />
+                                    <Label styleClass="conversion-label" text="Reverse Conversion" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="3" />
+                                <Label id="label3" maxWidth="-Infinity" prefWidth="101.0" text="Derived Result:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <Label id="label7" maxWidth="-Infinity" prefWidth="84.0" text="Result Color:" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                    <TextArea fx:id="derivationTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="gradient-text-area" wrapText="true" GridPane.columnSpan="3" GridPane.rowIndex="6" GridPane.rowSpan="4">
+                                       <GridPane.margin>
+                                          <Insets left="5.0" />
+                                       </GridPane.margin>
+                                    </TextArea>
                               </children>
                               <columnConstraints>
-                                    <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="-Infinity" minWidth="10.0" prefWidth="110.0" />
-                                <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="260.0" />
+                                    <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="20.0" />
+                                    <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="110.0" />
+                                <ColumnConstraints halignment="LEFT" hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="445.0" />
+                                    <ColumnConstraints />
                                     <ColumnConstraints />
                               </columnConstraints>
                               <rowConstraints>
-                                <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="100.0" vgrow="ALWAYS" />
+                                <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+                                <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="40.0" vgrow="ALWAYS" />
+                                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="20.0" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="20.0" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
                                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
                                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
                                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="102.0" minHeight="10.0" prefHeight="102.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="102.0" minHeight="10.0" prefHeight="102.0" vgrow="SOMETIMES" />
                                     <RowConstraints />
                               </rowConstraints>
                                  <padding>
-                                    <Insets left="5.0" right="5.0" />
+                                    <Insets left="5.0" />
                                  </padding>
                             </GridPane>
                            </children>
                         </AnchorPane>
-                      <AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="380.0" style="-fx-background-color: transparent;">
+                      <AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="320.0" style="-fx-background-color: transparent;">
                            <children>
                               <GridPane layoutX="1.0" styleClass="prop-grid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="120.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="60.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
                                 </columnConstraints>
                                 <rowConstraints>
                                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" vgrow="SOMETIMES" />
-                                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
-                                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="45.0" valignment="CENTER" vgrow="SOMETIMES" />
+                                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="45.0" valignment="CENTER" vgrow="SOMETIMES" />
                                     <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
                                     <ColorPickerTool fx:id="baseColorPicker" maxWidth="-Infinity" prefWidth="120.0" GridPane.columnIndex="1" GridPane.columnSpan="2" />
-                                <Label fx:id="label" maxWidth="-Infinity" minHeight="16.0" minWidth="-Infinity" prefHeight="16.0" text="Base Color:" GridPane.columnSpan="2" />
-                                    <ColorPickerTool fx:id="desiredColorPicker" maxWidth="-Infinity" prefWidth="120.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                <Label id="label1" text="Derivation:" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                                    <HBox alignment="CENTER" maxWidth="-Infinity" prefWidth="300.0" spacing="10.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="1">
+                                <Label fx:id="label" maxWidth="-Infinity" minHeight="16.0" minWidth="-Infinity" prefHeight="16.0" text="Base:" GridPane.columnSpan="2" />
+                                    <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefWidth="380.0" GridPane.columnSpan="4" GridPane.rowIndex="1">
                                        <children>
-                                      <Slider fx:id="derivationSlider" maxHeight="-Infinity" maxWidth="-Infinity" min="-100.0" minWidth="-Infinity" minorTickCount="10" prefWidth="200.0" showTickLabels="true" showTickMarks="true" styleClass="derivation-slider" />
-                                      <Label fx:id="forwardDerivationLabel" maxWidth="1.7976931348623157E308" prefWidth="120.0" text="0%" />
+                                      <Slider fx:id="derivationSlider" maxHeight="-Infinity" maxWidth="-Infinity" min="-100.0" minWidth="-Infinity" minorTickCount="10" prefWidth="200.0" showTickLabels="true" showTickMarks="true" styleClass="derivation-slider">
+                                             <HBox.margin>
+                                                <Insets />
+                                             </HBox.margin>
+                                             <padding>
+                                                <Insets top="5.0" />
+                                             </padding></Slider>
+                                          <VBox alignment="CENTER" prefWidth="100.0">
+                                             <children>
+                                            <Label id="label1" prefWidth="53.0" text="Forward" />
+                                            <Label fx:id="forwardDerivationLabel" alignment="CENTER" text="0%" />
+                                             </children>
+                                          </VBox>
                                        </children>
                                     </HBox>
-                                <Label id="label4" text="Desired Color:" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+                                <Label id="label4" text="Desired:" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+                                    <HBox alignment="CENTER_LEFT" spacing="20.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2">
+                                       <children>
+                                          <ColorPickerTool fx:id="desiredColorPicker" maxWidth="-Infinity" prefWidth="120.0" />
+                                          <VBox alignment="CENTER" maxWidth="-Infinity" prefWidth="100.0">
+                                             <children>
+                                            <Label id="label5" text="Reverse" />
+                                            <Label fx:id="reverseDerivationLabel" text="30%" />
+                                             </children>
+                                          </VBox>
+                                       </children>
+                                    </HBox>
                                  </children>
                                  <padding>
                                     <Insets left="10.0" top="20.0" />
@@ -167,7 +189,7 @@
                               </GridPane>
                            </children>
                         </AnchorPane>
-                        <AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="380.0">
+                        <AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="320.0">
                            <children>
                               <GridPane fx:id="gradientGridPane" layoutX="1.0" styleClass="prop-grid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <columnConstraints>
